# tensorflow-huge-model-support

./: README.md  pyproject.toml  setup.py
prefetch_module/: prefetch.cc
tensorflow_huge_model_support/: hms.py  tf_keras.py  tf_sess.py  utils.py
